--- a/app/src/main/res/layout/fragment_single_step.xml
+++ b/app/src/main/res/layout/fragment_single_step.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -24,9 +22,9 @@
 
         <ImageView
             android:id="@+id/placeholderImage"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_margin="48dp"
+            android:layout_width="@dimen/dimen_200dp"
+            android:layout_height="@dimen/dimen_200dp"
+            android:layout_margin="@dimen/dimen_48dp"
             android:src="@drawable/ic_no_video"
             android:fitsSystemWindows="true"
             android:visibility="gone"
@@ -46,8 +44,8 @@
             android:id="@+id/stepDescription"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:lineSpacingExtra="2dp"
+            android:layout_margin="@dimen/dimen_8dp"
+            android:lineSpacingExtra="@dimen/dimen_2dp"
             android:textSize="20sp"
             android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
             app:layout_constraintEnd_toEndOf="parent"
@@ -70,7 +68,6 @@
             android:layout_height="@dimen/dimen_48dp"
             android:background="@color/colorPrimary"
             android:layout_marginTop="@dimen/dimen_48dp"
-            android:onClick="nextButton"
             app:srcCompat="@drawable/ic_round_arrow_forward_24px"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/stepDescription"
@@ -94,7 +91,6 @@
             android:layout_height="@dimen/dimen_48dp"
             android:background="@color/colorPrimary"
             android:layout_marginTop="@dimen/dimen_48dp"
-            android:onClick="prevButton"
             app:srcCompat="@drawable/ic_round_arrow_back_24px"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/stepDescription"
