--- a/app/src/main/res/layout/ingredient_item_view.xml
+++ b/app/src/main/res/layout/ingredient_item_view.xml
@@ -9,7 +9,7 @@
 <android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:padding="@dimen/dimen_8dp">
 
     <TextView
         android:id="@+id/quantity"
@@ -24,7 +24,8 @@
         android:id="@+id/measure"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="4dp"
+        android:paddingStart="@dimen/dimen_4dp"
+        android:paddingEnd="@dimen/dimen_4dp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@id/quantity"
         app:layout_constraintTop_toTopOf="parent"
@@ -42,7 +43,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         tools:text="TextView"
-        android:paddingLeft="8dp"
+        android:paddingStart="@dimen/dimen_8dp"
+        android:paddingRight="@dimen/dimen_8dp"
         app:layout_constraintStart_toEndOf="@id/barrier1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
