--- a/app/src/main/res/layout/recipe_item_view.xml
+++ b/app/src/main/res/layout/recipe_item_view.xml
@@ -10,17 +10,17 @@
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    app:cardElevation="8dp"
-    app:cardCornerRadius="6dp"
+    android:layout_margin="@dimen/dimen_8dp"
+    app:cardElevation="@dimen/dimen_8dp"
+    app:cardCornerRadius="@dimen/dimen_6dp"
     android:focusable="true"
     android:clickable="true">
 
 <android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp"
+    android:paddingTop="@dimen/dimen_10dp"
+    android:paddingBottom="@dimen/dimen_10dp"
     >
 
     <android.support.constraint.Guideline
@@ -28,21 +28,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="16dp" />
+        app:layout_constraintGuide_begin="@dimen/dimen_16dp" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_end="16dp" />
+        app:layout_constraintGuide_end="@dimen/dimen_16dp" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="8dp" />
+        app:layout_constraintGuide_begin="@dimen/dimen_8dp" />
 
     <ImageView
         android:id="@+id/image"
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content"
         tools:text="Nutella Pie"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/dimen_16dp"
         app:layout_constraintTop_toBottomOf="@id/guideline3"
         app:layout_constraintStart_toEndOf="@id/image"
         app:layout_constraintEnd_toStartOf="@id/guideline2"/>
