--- a/app/src/main/res/layout/activity_step.xml
+++ b/app/src/main/res/layout/activity_step.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
-
 <LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,8 +9,7 @@
         android:id="@+id/singleStepContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-    </LinearLayout>
 
+</LinearLayout>
 
-</layout>
 
