--- a/app/src/main/res/layout/recipe_item_view.xml
+++ b/app/src/main/res/layout/recipe_item_view.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.design.card.MaterialCardView
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,8 +8,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/dimen_8dp"
-    app:cardElevation="@dimen/dimen_8dp"
-    app:cardCornerRadius="@dimen/dimen_6dp"
+    app:cardCornerRadius="@dimen/dimen_8dp"
+    app:cardElevation="@dimen/dimen_6dp"
     android:focusable="true"
     android:clickable="true">
 
@@ -71,4 +71,4 @@
 
 </android.support.constraint.ConstraintLayout>
 
-</android.support.design.card.MaterialCardView>
+</android.support.v7.widget.CardView>
