--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -40,6 +40,7 @@
             android:paddingRight="16dp"
             android:paddingBottom="4dp"
             android:textColor="@color/textGrid"
+            android:fontFamily="sans-serif"
             android:ellipsize="end"
             android:maxLines="4"
             app:layout_constraintTop_toBottomOf="@id/thumbnail"
@@ -56,6 +57,7 @@
             android:textColor="#6000"
             android:maxLines="2"
             android:ellipsize="end"
+            android:fontFamily="sans-serif-medium"
             app:layout_constraintTop_toBottomOf="@id/article_title"
             app:layout_constraintStart_toStartOf="parent"/>
     </android.support.constraint.ConstraintLayout>
